sandbox/output
GildedRose.java:14: error: cannot find symbol
            if(item[i].name.equals("Sulfuras, Hand of Ragnaros")){
               ^
  symbol:   variable item
  location: class GildedRose
1 error
